tests/fixtures/invalid/none_rshift_int.py
# Cannot right shift None and Int
x: None = None >> 1
